--- a/Sstilo.css
+++ b/Sstilo.css
@@ -1,94 +1,42 @@
-*{margin: 0;padding:0;box-sizing: border-box;}
-body{
-    background-color: darkslategray;
-    border-style: hidden;
-    border-radius: 25px;
-}
-h1{
-    text-align: center;
-    background-color: rgba(211, 231, 211, 0.596);
-    font-size: xx-large;
-    border-radius: 25px;
-    border-style: hidden;
-    margin-top: 10px;
-    margin-left: 25px;
-    margin-right: 25px;
-    
-}
-a{
-    text-align: center;
-    color: aliceblue;
-    font-size: x-large;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-a:hover{
-    text-decoration-style:solid;
-    font-style:normal;
-    font-size: x-large;
-    color: rgb(120, 204, 152);
-}
-nav{
-    max-width: 500px;
-    width: 70%;
-    padding: 20px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-    background-color:rgb(27, 34, 16);
-    text-align: center;
-    color: aliceblue;
-    border-style: solid;
-    border-radius: 25px;
-}
-nav h1{
-    background-color: rgb(43, 53, 25);
-    text-align: center;
-    color: aliceblue;
-    border-radius: 10px;
-}
-footer{
-     
-    position: absolute;
-    left: 50%;
-    top: 17%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-   
-    border-radius: 10px;
-}
-form{
-    background-color: aliceblue;
-    max-width: 500px;
-    width: 85%;
-    padding: 20px;
-    position: absolute;
-    left: 50%;
-    top: 75%;
-    transform: translate(-50%,-50%);
-    border-radius: 10px;
-}
-form h3{
-    text-align: center;
-    color: rgb(31, 53, 53);
-
-}
- form input[type="text"],
- form input[type="password"]
- ,form input[type="email"],form input[type="tel"]{
-     width: 100%;
-     height: 45px;
-     border: 1px solid #ccc;
-     padding-left: 10px;
-     margin: 10px;
-     border-radius: 10px;
- }
-form input[type="submit"]{
+body {
+    background-color: #333;
+    color: #fff;
+    font-family: Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  form {
+    background-color: #444;
+    padding: 2rem;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px #000;
+  }
+  
+  label,
+  input[type="text"],
+  input[type="password"],
+  input[type="submit"] {
+    display: block;
     width: 100%;
-    height: 30px;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border: none;
+    border-radius: 5px;
+    background-color: #555;
+    color: #fff;
+  }
+  
+  input[type="submit"] {
+    background-color: #666;
     cursor: pointer;
-    background-color: darkslategray;
-    color: aliceblue;
-    border-radius: 15px;
-}
+  }
+  
